--- a/Swift App/Base.lproj/Main.storyboard
+++ b/Swift App/Base.lproj/Main.storyboard
@@ -43,16 +43,40 @@
                                     <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PBr-tX-zVJ"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bG9-gb-izl">
+                                <rect key="frame" x="137.5" y="160.5" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="j2g-Ct-ltM"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I2j-PZ-Zlm">
+                                <rect key="frame" x="137.5" y="210.5" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Mbn-Nk-CoW"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="I2j-PZ-Zlm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6qA-5J-RxR"/>
                             <constraint firstItem="Xf3-CS-xHe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DSD-rm-aTC"/>
                             <constraint firstItem="015-Ic-0LM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WGQ-We-AjF"/>
                             <constraint firstItem="015-Ic-0LM" firstAttribute="top" secondItem="Xf3-CS-xHe" secondAttribute="bottom" constant="50" id="bGR-9O-ktw"/>
+                            <constraint firstItem="bG9-gb-izl" firstAttribute="top" secondItem="015-Ic-0LM" secondAttribute="bottom" constant="20" id="iuV-uJ-p9p"/>
+                            <constraint firstItem="bG9-gb-izl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lfa-hK-JhW"/>
                             <constraint firstItem="Xf3-CS-xHe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="pUW-Pp-vlq"/>
+                            <constraint firstItem="I2j-PZ-Zlm" firstAttribute="top" secondItem="bG9-gb-izl" secondAttribute="bottom" constant="20" id="uRg-D7-7gN"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="text1" destination="bG9-gb-izl" id="swc-7Q-xhX"/>
+                        <outlet property="text2" destination="I2j-PZ-Zlm" id="Z3T-WL-Fkl"/>
                         <outlet property="theLabel" destination="Xf3-CS-xHe" id="1Wh-qZ-E2d"/>
                     </connections>
                 </viewController>
